2007-09-29  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/eventlistitem.cpp:
		Use light gray background for STOP items.

2007-09-27  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Add delete all/others function to event list
		(patch by Ralph Glasstetter).

2007-09-13  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Really fix project file encoding this time.

2007-09-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Always use UTF-8 encoding for project file.
		Add a proper XML declaration at the beginning.

2007-09-06  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/main.cpp:
		Locale patch by Michael Kreuzer.

2007-08-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/mpegmuxer.cpp:
		Prepare for DTS audio.

	* src/psfile.cpp:
		Improved stream detection (including DTS and subtitle hooks).

2007-08-15  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Improved SI table parser and stream detection.

2007-08-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Also detect teletext and subtitle streams. We may
		not be able to use them, but it's good to know that
		they're there.

2007-08-03  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.h:
	* src/tsfile.cpp:
		Add SI table parser.

2007-08-02  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
		Check for libswscale.

	* src/avframe.h:
	* src/avframe.cpp:
		Use libswscale if present (patch by Michael Kreuzer).

	* src/Makefile.w32:
		Also scan Makefile.w32 for id keyword.

2007-07-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Set svn:keywords property.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix "versioned" build on Windows.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
	* src/avframe.h:
	* src/lavfmuxer.cpp:
	* src/lavfmuxer.h: